AuditLog: Detail: Splited Info, Warning, Error, ChannelUpdated, OverwriteUpdated, MemberUpdated and GuildUpdated into separate component

--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
@@ -69,64 +69,29 @@
             </div>
           </c-alert>
         } @else {
+          @if ([1, 2, 3].includes(response.value.type)) {
+            <app-detail-text [detail]="response.value" />
+          }
+
           @switch (response.value.type) {
-            @case (1) {
-              <ng-container
-                [ngTemplateOutlet]="textDetail"
-                [ngTemplateOutletContext]="{
-                  data: response.value.data,
-                  color: 'secondary',
-                }"
-              />
-            }
-
-            @case (2) {
-              <ng-container
-                [ngTemplateOutlet]="textDetail"
-                [ngTemplateOutletContext]="{
-                  data: response.value.data,
-                  color: 'warning',
-                }"
-              />
-            }
-
-            @case (3) {
-              <ng-container
-                [ngTemplateOutlet]="textDetail"
-                [ngTemplateOutletContext]="{
-                  data: response.value.data,
-                  color: 'danger',
-                }"
-              />
+            @case (7) {
+              <app-channel-updated [detail]="response.value" />
             }
 
             @case (11) {
-              @switch (response.value.data.targetType) {
-                @case (0) {
-                  <app-info-row
-                    key="Role"
-                    [value]="response.value.data.targetId | roleLookup | async"
-                  />
-                }
-
-                @case (1) {
-                  <app-info-row
-                    key="Uživatel"
-                    [value]="response.value.data.targetId | userLookup | async"
-                  />
-                }
-              }
+              <app-overwrite-updated [detail]="response.value" />
             }
 
             @case (13) {
-              <app-info-row
-                key="Uživatel"
-                [value]="response.value.data.userId | userLookup | async"
-              />
+              <app-member-updated [detail]="response.value" />
+            }
+
+            @case (15) {
+              <app-guild-updated [detail]="response.value" />
             }
           }
 
-          @if ([7, 11, 13, 15, 24].includes(response.value.type)) {
+          @if ([24].includes(response.value.type)) {
             <ng-container
               [ngTemplateOutlet]="diffTable"
               [ngTemplateOutletContext]="{
@@ -148,19 +113,6 @@
   </c-card>
 </c-container>
 
-<ng-template #textDetail let-data="data" let-color="color">
-  <c-row>
-    <c-col md="6">
-      <app-info-row key="Aplikace" [value]="data.sourceAppName" />
-      <app-info-row key="Zdroj" [value]="data.source" />
-    </c-col>
-  </c-row>
-
-  <c-alert [color]="color" class="mb-0 mt-3">
-    <pre class="mb-0">{{ data.text }}</pre>
-  </c-alert>
-</ng-template>
-
 <ng-template #diffTable let-data="data" let-type="type">
   <table cTable class="mb-0 mt-2" [small]="true" [striped]="true">
     <thead>
@@ -172,34 +124,6 @@
     </thead>
     <tbody>
       @switch (type) {
-        @case (7) {
-          <ng-container
-            [ngTemplateOutlet]="channelUpdatedDiff"
-            [ngTemplateOutletContext]="{ data }"
-          />
-        }
-
-        @case (11) {
-          <ng-container
-            [ngTemplateOutlet]="overwriteUpdatedDiff"
-            [ngTemplateOutletContext]="{ data }"
-          />
-        }
-
-        @case (13) {
-          <ng-container
-            [ngTemplateOutlet]="memberUpdatedDiff"
-            [ngTemplateOutletContext]="{ data }"
-          />
-        }
-
-        @case (15) {
-          <ng-container
-            [ngTemplateOutlet]="guildUpdatedDiff"
-            [ngTemplateOutletContext]="{ data }"
-          />
-        }
-
         @case (24) {
           <ng-container
             [ngTemplateOutlet]="threadUpdatedDiff"
@@ -209,619 +133,6 @@
       }
     </tbody>
   </table>
-</ng-template>
-
-<ng-template #channelUpdatedDiff let-data="data">
-  @if (data.bitrate && data.bitrate.before != data.bitrate.after) {
-    <tr>
-      <th>Bitrate</th>
-      <td>{{ data.bitrate.before | spacedNumber }} bps</td>
-      <td>{{ data.bitrate.after | spacedNumber }} bps</td>
-    </tr>
-  }
-
-  @if (data.flags && data.flags.before != data.flags.after) {
-    <tr>
-      <th>Příznaky</th>
-      <td>
-        {{ data.flags.before }} ({{ data.flags.before | asBitmaskString: 32 }})
-      </td>
-      <td>
-        {{ data.flags.after }} ({{ data.flags.after | asBitmaskString: 32 }})
-      </td>
-    </tr>
-  }
-
-  @if (data.position && data.position.before != data.position.after) {
-    <tr>
-      <th>Pozice</th>
-      <td>{{ data.position.before | spacedNumber }}</td>
-      <td>{{ data.position.after | spacedNumber }}</td>
-    </tr>
-  }
-
-  @if (data.slowMode && data.slowMode.before != data.slowMode.after) {
-    <tr>
-      <th>Slowmode</th>
-      <td>{{ data.slowMode.before * 1000 | timespan }}</td>
-      <td>{{ data.slowMode.after * 1000 | timespan }}</td>
-    </tr>
-  }
-
-  @if (data.isNsfw && data.isNsfw.before != data.isNsfw.after) {
-    <tr>
-      <th>NSFW</th>
-      <td>
-        <app-checkbox
-          checkboxId="isNsfw"
-          [label]="''"
-          [formControl]="data.isNsfw.before | asReadonlyFormControl"
-        />
-      </td>
-      <td>
-        <app-checkbox
-          checkboxId="isNsfw"
-          [label]="''"
-          [formControl]="data.isNsfw.after | asReadonlyFormControl"
-        />
-      </td>
-    </tr>
-  }
-
-  @if (data.topic && data.topic.before != data.topic.after) {
-    <tr>
-      <th>Popis</th>
-      <td>{{ data.topic.before }}</td>
-      <td>{{ data.topic.after }}</td>
-    </tr>
-  }
-
-  @if (data.name && data.name.before != data.name.after) {
-    <tr>
-      <th>Název</th>
-      <td>{{ data.name.before }}</td>
-      <td>{{ data.name.after }}</td>
-    </tr>
-  }
-</ng-template>
-
-<ng-template #overwriteUpdatedDiff let-data="data">
-  @if (data.allow) {
-    <tr>
-      <th>Povolené oprávnění</th>
-      <td>
-        <ul class="m-0">
-          @for (perm of data.allow.before; track $index) {
-            <li>{{ perm }}</li>
-          }
-        </ul>
-      </td>
-      <td>
-        <ul class="m-0">
-          @for (perm of data.allow.after; track $index) {
-            <li>{{ perm }}</li>
-          }
-        </ul>
-      </td>
-    </tr>
-  }
-
-  @if (data.deny) {
-    <tr>
-      <th>Zakázané oprávnění</th>
-      <td>
-        <ul class="m-0">
-          @for (perm of data.deny.before; track $index) {
-            <li>{{ perm }}</li>
-          }
-        </ul>
-      </td>
-      <td>
-        <ul class="m-0">
-          @for (perm of data.deny.after; track $index) {
-            <li>{{ perm }}</li>
-          }
-        </ul>
-      </td>
-    </tr>
-  }
-</ng-template>
-
-<ng-template #memberUpdatedDiff let-data="data">
-  @if (data.nickname && data.nickname.before != data.nickname.after) {
-    <tr>
-      <th>Přezdívka</th>
-      <td>{{ data.nickname.before }}</td>
-      <td>{{ data.nickname.after }}</td>
-    </tr>
-  }
-
-  @if (data.isMuted && data.isMuted.before != data.isMuted.after) {
-    <tr>
-      <th>Ztlumen mikrofon</th>
-      <td>
-        <app-checkbox
-          [checkboxId]="'isMuted'"
-          [label]="''"
-          [formControl]="data.isMuted.before | asReadonlyFormControl"
-        />
-      </td>
-      <td>
-        <app-checkbox
-          [checkboxId]="'isMuted'"
-          [label]="''"
-          [formControl]="data.isMuted.after | asReadonlyFormControl"
-        />
-      </td>
-    </tr>
-  }
-
-  @if (data.isDeaf && data.isDeaf.before != data.isDeaf.after) {
-    <tr>
-      <th>Umlčen</th>
-      <td>
-        <app-checkbox
-          [checkboxId]="'isDeaf'"
-          [label]="''"
-          [formControl]="data.isDeaf.before | asReadonlyFormControl"
-        />
-      </td>
-      <td>
-        <app-checkbox
-          [checkboxId]="'isDeaf'"
-          [label]="''"
-          [formControl]="data.isDeaf.after | asReadonlyFormControl"
-        />
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.selfUnverifyMinimalTime &&
-    data.selfUnverifyMinimalTime.before != data.selfUnverifyMinimalTime.after
-  ) {
-    <tr>
-      <th>Minimální čas self-unverify</th>
-      <td>{{ data.selfUnverifyMinimalTime.before }}</td>
-      <td>{{ data.selfUnverifyMinimalTime.after }}</td>
-    </tr>
-  }
-
-  @if (data.flags && data.flags.before != data.flags.after) {
-    <tr>
-      <th>Příznaky</th>
-      <td>
-        {{ data.flags.before }} ({{ data.flags.before | asBitmaskString: 32 }})
-      </td>
-      <td>
-        {{ data.flags.after }} ({{ data.flags.after | asBitmaskString: 32 }})
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.pointsDeactivated &&
-    data.pointsDeactivated.before != data.pointsDeactivated.after
-  ) {
-    <tr>
-      <th>Body deaktivovány</th>
-      <td>
-        <app-checkbox
-          [checkboxId]="'pointsDeactivated'"
-          [label]="''"
-          [formControl]="data.pointsDeactivated.before | asReadonlyFormControl"
-        />
-      </td>
-      <td>
-        <app-checkbox
-          [checkboxId]="'pointsDeactivated'"
-          [label]="''"
-          [formControl]="data.pointsDeactivated.after | asReadonlyFormControl"
-        />
-      </td>
-    </tr>
-  }
-</ng-template>
-
-<ng-template #guildUpdatedDiff let-data="data">
-  @if (
-    data.defaultMessageNotifications &&
-    data.defaultMessageNotifications.before !=
-      data.defaultMessageNotifications.after
-  ) {
-    <tr>
-      <th>Výchozí upozornění</th>
-      <td>
-        @switch (data.defaultMessageNotifications.before) {
-          @case (0) {
-            Všechny zprávy
-          }
-
-          @case (1) {
-            Pouze označení
-          }
-        }
-      </td>
-      <td>
-        @switch (data.defaultMessageNotifications.after) {
-          @case (0) {
-            Všechny zprávy
-          }
-
-          @case (1) {
-            Pouze označení
-          }
-        }
-      </td>
-    </tr>
-  }
-
-  @if (data.description && data.description.before != data.description.after) {
-    <tr>
-      <th>Popis</th>
-      <td>{{ data.description.before }}</td>
-      <td>{{ data.description.after }}</td>
-    </tr>
-  }
-
-  @if (data.vanityUrl && data.vanityUrl.before != data.vanityUrl.after) {
-    <tr>
-      <th>Vanity URL</th>
-      <td>{{ data.vanityUrl.before }}</td>
-      <td>{{ data.vanityUrl.after }}</td>
-    </tr>
-  }
-
-  @if (data.bannerId && data.bannerId.before != data.bannerId.after) {
-    <tr>
-      <th>Banner ID</th>
-      <td>{{ data.bannerId.before }}</td>
-      <td>{{ data.bannerId.after }}</td>
-    </tr>
-  }
-
-  @if (
-    data.discoverySplashId &&
-    data.discoverySplashId.before != data.discoverySplashId.after
-  ) {
-    <tr>
-      <th>ID komunitního pozadí</th>
-      <td>{{ data.discoverySplashId.before }}</td>
-      <td>{{ data.discoverySplashId.after }}</td>
-    </tr>
-  }
-
-  @if (data.splashId && data.splashId.before != data.splashId.after) {
-    <tr>
-      <th>ID pozadí pozvánky</th>
-      <td>{{ data.splashId.before }}</td>
-      <td>{{ data.splashId.after }}</td>
-    </tr>
-  }
-
-  @if (data.iconId && data.iconId.before != data.iconId.after) {
-    <tr>
-      <th>ID ikony</th>
-      <td>{{ data.iconId.before }}</td>
-      <td>{{ data.iconId.after }}</td>
-    </tr>
-  }
-
-  @if (data.iconData && (data.iconData.before || data.iconData.after)) {
-    <tr>
-      <th>Ikona</th>
-      <td>
-        @if (data.iconData.before) {
-          <img
-            [src]="'data:image/png;base64, ' + data.iconData.before"
-            alt="GuildUpdated-Icon-Before"
-          />
-        }
-      </td>
-      <td>
-        @if (data.iconData.after) {
-          <img
-            [src]="'data:image/png;base64, ' + data.iconData.after"
-            alt="GuildUpdated-Icon-After"
-          />
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.publicUpdatesChannelId &&
-    data.publicUpdatesChannelId.before != data.publicUpdatesChannelId.after
-  ) {
-    <tr>
-      <th>Kanál na novinky</th>
-      <td>
-        @if (data.publicUpdatesChannelId.before) {
-          {{ data.publicUpdatesChannelId.before | channelLookup | async }}
-        }
-      </td>
-      <td>
-        @if (data.publicUpdatesChannelId.after) {
-          {{ data.publicUpdatesChannelId.after | channelLookup | async }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.rulesChannelId &&
-    data.rulesChannelId.before != data.rulesChannelId.after
-  ) {
-    <tr>
-      <th>Kanál s pravidly</th>
-      <td>
-        @if (data.rulesChannelId.before) {
-          {{ data.rulesChannelId.before | channelLookup | async }}
-        }
-      </td>
-      <td>
-        @if (data.rulesChannelId.after) {
-          {{ data.rulesChannelId.after | channelLookup | async }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.systemChannelId &&
-    data.systemChannelId.before != data.systemChannelId.after
-  ) {
-    <tr>
-      <th>Systémový kanál</th>
-      <td>
-        @if (data.systemChannelId.before) {
-          {{ data.systemChannelId.before | channelLookup | async }}
-        }
-      </td>
-      <td>
-        @if (data.systemChannelId.after) {
-          {{ data.systemChannelId.after | channelLookup | async }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.afkChannelId && data.afkChannelId.before != data.afkChannelId.after
-  ) {
-    <tr>
-      <th>AFK kanál</th>
-      <td>
-        @if (data.afkChannelId.before) {
-          {{ data.afkChannelId.before | channelLookup | async }}
-        }
-      </td>
-      <td>
-        @if (data.afkChannelId.after) {
-          {{ data.afkChannelId.after | channelLookup | async }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (data.afkTimeout && data.afkTimeout.before != data.afkTimeout.after) {
-    <tr>
-      <th>AFK timeout</th>
-      <td>
-        @if (data.afkTimeout.before) {
-          {{ data.afkTimeout.before * 1000 | timespan }}
-        }
-      </td>
-      <td>
-        @if (data.afkTimeout.after) {
-          {{ data.afkTimeout.after * 1000 | timespan }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (data.name && data.name.before != data.name.after) {
-    <tr>
-      <th>Název</th>
-      <td>{{ data.name.before }}</td>
-      <td>{{ data.name.after }}</td>
-    </tr>
-  }
-
-  @if (data.mfaLevel && data.mfaLevel.before != data.mfaLevel.after) {
-    <tr>
-      <th>2FA úroveň</th>
-      <td>
-        <app-checkbox
-          [checkboxId]="'mfaLevelBefore'"
-          [label]="''"
-          [formControl]="data.mfaLevel.before == 1 | asReadonlyFormControl"
-        />
-      </td>
-      <td>
-        <app-checkbox
-          [checkboxId]="'mfaLevelAfter'"
-          [label]="''"
-          [formControl]="data.mfaLevel.after == 1 | asReadonlyFormControl"
-        />
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.verificationLevel &&
-    data.verificationLevel.before != data.verificationLevel.after
-  ) {
-    <tr>
-      <th>Úroveň ověření</th>
-      <td>
-        @switch (data.verificationLevel.before) {
-          @case (0) {
-            Žádná
-          }
-          @case (1) {
-            Nízká
-          }
-          @case (2) {
-            Střední
-          }
-          @case (3) {
-            Vysoká
-          }
-          @case (4) {
-            Extrémní
-          }
-        }
-      </td>
-      <td>
-        @switch (data.verificationLevel.after) {
-          @case (0) {
-            Žádná
-          }
-          @case (1) {
-            Nízká
-          }
-          @case (2) {
-            Střední
-          }
-          @case (3) {
-            Vysoká
-          }
-          @case (4) {
-            Extrémní
-          }
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.explicitContentFilter &&
-    data.explicitContentFilter.before != data.explicitContentFilter.after
-  ) {
-    <tr>
-      <th>Filtr explicitního obsahu</th>
-      <td>
-        @switch (data.explicitContentFilter.before) {
-          @case (0) {
-            Vypnuto
-          }
-          @case (1) {
-            Uživatelé bez rolí
-          }
-          @case (2) {
-            Všichni uživatelé
-          }
-        }
-      </td>
-      <td>
-        @switch (data.explicitContentFilter.after) {
-          @case (0) {
-            Vypnuto
-          }
-          @case (1) {
-            Uživatelé bez rolí
-          }
-          @case (2) {
-            Všichni uživatelé
-          }
-        }
-      </td>
-    </tr>
-  }
-
-  @if (data.features && data.features.before != data.features.after) {
-    <tr>
-      <th>Funkcionalita</th>
-      <td>
-        {{ data.features.before }} ({{
-          data.features.before | asBitmaskString: 64
-        }})
-      </td>
-      <td>
-        {{ data.features.after }} ({{
-          data.features.after | asBitmaskString: 64
-        }})
-      </td>
-    </tr>
-  }
-
-  @if (data.premiumTier && data.premiumTier.before != data.premiumTier.after) {
-    <tr>
-      <th>Úroveň vylepšení</th>
-      <td>
-        @if (data.premiumTier.before === 0) {
-          Žádná úroveň
-        } @else {
-          Tier{{ data.premiumTier.before }}
-        }
-      </td>
-      <td>
-        @if (data.premiumTier.after === 0) {
-          Žádná úroveň
-        } @else {
-          Tier{{ data.premiumTier.after }}
-        }
-      </td>
-    </tr>
-  }
-
-  @if (
-    data.systemChannelFlags &&
-    data.systemChannelFlags.before != data.systemChannelFlags.after
-  ) {
-    <tr>
-      <th>Nastavení systémového kanálu</th>
-      <td>
-        {{ data.systemChannelFlags.before }} ({{
-          data.systemChannelFlags.before | asBitmaskString: 64
-        }})
-      </td>
-      <td>
-        {{ data.systemChannelFlags.after }} ({{
-          data.systemChannelFlags.after | asBitmaskString: 64
-        }})
-      </td>
-    </tr>
-  }
-
-  @if (data.nsfwLevel && data.nsfwLevel.before != data.nsfwLevel.after) {
-    <tr>
-      <th>Úroveň NSFW</th>
-      <td>
-        @switch (data.nsfwLevel.before) {
-          @case (0) {
-            Výchozí
-          }
-          @case (1) {
-            Explicitní
-          }
-          @case (2) {
-            Bezpečný
-          }
-          @case (3) {
-            Věkově omezený
-          }
-        }
-      </td>
-      <td>
-        @switch (data.nsfwLevel.after) {
-          @case (0) {
-            Výchozí
-          }
-          @case (1) {
-            Explicitní
-          }
-          @case (2) {
-            Bezpečný
-          }
-          @case (3) {
-            Věkově omezený
-          }
-        }
-      </td>
-    </tr>
-  }
 </ng-template>
 
 <ng-template #threadUpdatedDiff let-data="data">
