AuditLog:Detail: ThreadDeleted event

--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/interaction-command/interaction-command.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/interaction-command/interaction-command.component.html
@@ -13,7 +13,7 @@
     <app-info-row key="Jazyk" [value]="detail().data.locale" />
   </c-col>
 
-  <c-col class="d-flex row">
+  <c-col class="d-flex flex-column">
     <app-checkbox
       checkboxId="isSuccess"
       label="Dokončen úspěšně"
