--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
@@ -98,6 +98,10 @@
               <app-interaction-command [detail]="response.value" />
             }
 
+            @case (21) {
+              <app-thread-deleted [detail]="response.value" />
+            }
+
             @case (24) {
               <app-thread-updated [detail]="response.value" />
             }
