--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/message-deleted/message-embed/message-embed.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/message-deleted/message-embed/message-embed.component.html
@@ -38,7 +38,7 @@
       </c-col>
     </c-row>
 
-    <table cTable [small]="true" [striped]="true">
+    <table cTable [small]="true" [striped]="true" class="mb-0">
       <thead>
         <tr>
           <th>Název</th>
