--- a/src/PrivateAdmin/src/app/administration/audit-log/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<common-dashboard>
-    <app-filter (filterChanged)="list.filterChanged($event)" filter></app-filter>
-    <app-list #list list></app-list>
-</common-dashboard>
+<div class="row ml-0 mr-0 mt-2 pt-2">
+    <div class="col">
+        <app-new-web-info text="Audit log byl přesunut do nové administrace." />
+    </div>
+</div>
