Adds guild, user, and channel lookup to modal views

--- a/src/AdminWeb/src/app/views/points/transactions/transactions-list/transactions-list.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions-list/transactions-list.component.html
@@ -24,6 +24,14 @@
           <td>{{ rowInModal.messageId }}</td>
         </tr>
         <tr>
+          <th>Server</th>
+          <td>{{ rowInModal.guildId | guildLookup | async }}</td>
+        </tr>
+        <tr>
+          <th>Uživatel</th>
+          <td>{{ rowInModal.userId | userLookup | async }}</td>
+        </tr>
+        <tr>
           <th>Vytvořeno</th>
           <td>{{ rowInModal.createdAt | localeDatePipe }}</td>
         </tr>
