Dropped invite feature from old administration

--- a/src/PrivateAdmin/src/app/administration/invites/invites-list/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/invites/invites-list/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
-<app-navigation [navigation]="navigation"></app-navigation>
-
 <common-dashboard>
-    <app-filter filter (filterChanged)="list.filterChanged($event)"></app-filter>
-    <app-list #list list></app-list>
+    <app-new-web-info
+        [text]="'Pozvánky byly přesunuty do nové administrace.'"
+    />
 </common-dashboard>
